Fix sidebar height issue on mobile

--- a/src/client-app/src/styles/styles.scss
+++ b/src/client-app/src/styles/styles.scss
@@ -29,7 +29,7 @@ a {
 }
 
 .iot-sidebar {
-    height: 100%;
+    height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
